fix mobile overflow

--- a/app/assets/stylesheets/catarse_bootstrap/_main.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.sass
@@ -3,6 +3,9 @@
   +transition-duration(500ms)
   +transition-timing-function(ease)
 
+html
+  overflow-x: hidden
+
 body
   color: $blue-one
   font-family: "proxima-nova",sans-serif
